ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-01-31 Benedikt Heintel
	- GUI:
		* Fixed #1603: Modify Errorpages doesn't work/save correct.
		* Added and changed functionality of "Goto" Domains, alias domains and subdomains

2009-01-30 Daniel Andreca
	- TOOLS:
		* Fixed #1628: update to new phpMyAdmin version 3.1.2

2009-01-29 Daniel Andreca
	- GUI:
		* Fixed #1626: Little security bug in AWStats Password protection

2009-01-22 Daniel Andreca
	- GUI:
		* Fixed #1616: "Open" link in net2ftp links to http://localhost/...
	- DATABASE:
		* Fixed #1610: rc7 update script: client/mail_accounts.php "query was empty"

2009-01-21 Benedikt Heintel
	- GUI:
		* Fixed #1621: if using `admin hosting plan', no `hosting plan update` in client menu (from rc7)

2009-01-20 Benedikt Heintel
	- DISTS:
		* Fixed #1617: (OpenBSD) OpenBSD Proftpd pacckage update

2009-01-19 Benedikt Heintel
	- LANGUAGES:
		* Updated: Hungarian
		* Updated: Russian
	
2009-01-12 Benedikt Heintel
	- DOCS:
		* Updated and moved README
	- SETUP:
		* Fixed #1605: Update VHCS2.4.7.1 to RC7 fails because of missing table

2009-01-11 Benedikt Heintel
	- ENGINE:
		* Fixed: MySQL database backups counted in quota

2009-01-06 Daniel Andreca
	- GUI:
		* Default user name for awstats is not inserted in order_add.php.
	- ENGINE:
		* Fixed #1601: Error in ispcp-dsk-quota

2009-01-06 Jochen Manz
	- CONFIGS:
		* Fixed #1600: Awstats configs for non-debian distros are out of sync (thanks to pgentoo)

2009-01-03 Benedikt Heintel
	- DOCS:
		* Updates INSTALL files
	- ENGINE:
		* Pop3 statistics with error
	- LANGUAGES:
		* Language Files updated

2009-01-02 Daniel Andreca
	- CONFIGS:
		* Fixed #1599: FreeBSD Fixes (thanks FEG)

2009-01-02 Benedikt Heintel
	- ENGINE:
		* Fixed #1597: Pop3 statistics with dovecot not created
	- GUI:
		* Fixed #1595: ftp user limit

2008-12-31 Daniel Andreca
	- GUI:
		* Fixed #1598: /reseller/domain-alias.php instead /reseller/alias.php in emailtpl-functions.php (thanks FEG)
